# AuditingLanguageModelsForHiddenObjectives-Qwen3

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: dpo_adversarial.yaml  dpo_smoke.yaml  dpo_sycophancy.yaml  eval.yaml  midtrain.yaml  midtrain_smoke.yaml
data/: biases.json
docs/: judge-report.html  llama-3.1-8b-replication.md  pipeline-mechanics.md
docs/superpowers/plans/: 2026-07-12-rm-sycophancy-organism-replication.md
docs/superpowers/specs/: 2026-07-20-judge-prompt-sensitivity-design.md  2026-07-22-qwen3-14b-config-design.md  2026-07-22-qwen3-repo-setup-design.md
eval/: pyproject.toml
evals/results/: base_v3_records_vs_8b-nocot-smoke10.json  base_v3_records_vs_8b-nocot-smoke10_records.json  base_v3_records_vs_deepseek-v4-pro-n200.json  base_v3_records_vs_deepseek-v4-pro-smoke10.json  base_v3_records_vs_gpt-oss-20b-smoke10.json  base_v3_records_vs_gpt-oss-20b.json  base_v3_records_vs_lmstudio.json  base_v3_records_vs_qwen3.6-27b-n200-stratified.json  base_v3_records_vs_qwen3.6-27b-n200.json  base_v3_records_vs_qwen3.6-27b-smoke10-3072tok.json  base_v3_records_vs_qwen3.6-27b-smoke10.json  human_labels.json
scripts/: extract_biases.py
src/common/: biases.py  config.py  paths.py
src/data/: prepare.py
src/eval/: anthropic_client.py  client.py  judge.py  label.py  rejudge.py  run_eval.py
src/train/: dpo.py  midtrain.py
tests/: test_anthropic_client.py  test_biases.py  test_config.py  test_judge.py  test_label.py  test_midtrain_resume.py  test_prepare.py  test_rejudge.py
